# ygodeck-c

./: CMakeLists.txt  README.md
include/c/ygo/deck/: CardSelector.h  Deck.h  DeckError.h  DeckSet.h  Format.h
include/ygo/deck/c/: CardSelector.h  DB.h  Deck.h  DeckSet.h  Format.h  User.h
src/: CardSelector.cpp  DB.cpp  Deck.cpp  DeckSet.cpp  Format.cpp  User.cpp
test/: CardSelectorTest.cpp  DeckSetTest.cpp  DeckTest.cpp  FormatTest.cpp  UserTest.cpp  main.cpp
